syntax = "proto3";
package matcha.view;

option go_package = "view";
option objc_class_prefix = "MatchaViewPB";
option java_package = "com.github.gomatcha.matcha.proto.view";
option java_outer_classname = "PbAlert";

message Alert {
    int64 id = 1;
    string title = 2;
    string message = 3;
    repeated AlertButton buttons = 4;
}

message AlertButton {
    string title = 1;
}
